# Percy-Jackson---Blue

./: .gitignore  ML.py  ML_predict.py  README.md  data_log.py  gui.py  init.sh  m5core2.ino  main.py  mqtt.py  run.sh  test_predictions.py  uart.py
data/: check_connectivity.npy  do_nothing.npy  do_nothing_while_sitting.npy  do_nothing_while_standing.npy  running2.npy  running3.npy  sit.npy  sit2.npy  sit3.npy  stand.npy  stand2 copy.npy  stand3.npy  walk.npy  walk3.npy
documentations/: Documentation Part 2.docx  Project Configurability and Deployment Plan.docx
model1/: activity_classification_model.keras  activity_classification_model_CNN.keras  activity_classification_model_CNN_dense.keras  activity_classification_model_CNN_expanded.keras  activity_classification_model_w_nothing.keras  four_class_95pc.keras  model1.keras
mycode/apps/central_hr/: CMakeLists.txt  prj.conf
mycode/apps/central_hr/include/: ble_data.h  usb_uart.h
mycode/apps/central_hr/src/: ble_data.c  main.c  usb_uart.c
mycode/apps/ibeacon/: CMakeLists.txt  prj.conf
mycode/apps/ibeacon/include/: ble_data.h  common_lib.h  my_sensor.h
mycode/apps/ibeacon/src/: ble_data.c  main.c  my_sensor.c
mycode/include/: dummy.h
